2009-03-14  Corinna Vinschen  <corinna@vinschen.de>

	* libc/include/stdlib.h (_mkstemp_r, _mktemp_r): Move out of
	!_REENT_ONLY section.

2009-03-14  Corinna Vinschen  <corinna@vinschen.de>

	* libc/include/stdio.h (_mkstemp_r, _mktemp_r): Move declarations
	to stdlib.h.
	* libc/include/stdlib.h (mktemp, _mktemp_r): Warn when using.
	* libc/stdio/mktemp.c: Explain the security risk when using
	mktemp.

2009-03-12  Craig Howland <howland@LGSInnovations.com>

	* libc/time/time.tex (wcsftime.def):  Include.
	* libc/time/wcsftime.c:  Clean up documentation a little.

2009-03-12  Craig Howland <howland@LGSInnovations.com>

	* libc/stdio/swscanf.c:  Some documentation corrections.

2009-03-12  Craig Howland <howland@LGSInnovations.com>

	* libc/stdio/swprintf.c (_swprintf_r, swprintf):
	correct how terminating L'\0' is added;
	change return to match standard for when output does not fit;
	some corrections and enhancements to the docs.
	* libc/stdio/vswprintf.c (_vswprintf_r):  ditto, except for docs.
	* libc/stdio/vfwprintf.c:  some corrections to the docs and some
	enhancements to comments.  (No code changes.)
	* libc/time/strftime.c:  Correct some problems that made wcsftime()
	not work correctly:  work properly with swprintf returns that are
	different from snprintf returns, correct test vector lengths for
	when sizeof(wchar_t) > 1.
	* libc/stdio/sprintf.c:  Some documentation and comment corrections and
	enhancements to match those done to swprintf.c.

2009-03-11  Corinna Vinschen  <corinna@vinschen.de>

	* libc/include/wchar.h (wcscasecmp, wcsncasecmp): Declare.
	* libc/string/Makefile.am: Add wcscasecmp.c, wcsncasecmp.c
	* libc/stdio/Makefile.in: Regenerate.
	* libc/string/strings.tex: Add new documentation references.
	* libc/string/wcscasecmp.c: New file.
	* libc/string/wcsncasecmp.c: New file.

2009-03-11  Corinna Vinschen  <corinna@vinschen.de>

	* libc/include/wchar.h (fwscanf, swscanf, vfwscanf, vswscanf, vwscanf,
	wscanf): Declare.