@@ -47,6 +47,7 @@ managing areas of memory.  The corresponding declarations are in
 * strxfrm::     Transform string
 * swab::        Swap adjacent bytes
 * wcscasecmp::  Compare wide character strings ignoring case
+* wcsdup::      Wide character string duplicate
 * wcsncasecmp:: Compare wide character strings ignoring case
 @end menu
 
@@ -172,6 +173,9 @@ managing areas of memory.  The corresponding declarations are in
 
 @page
 @include string/wcscasecmp.def
+
+@page
+@include string/wcsdup.def
 
 @page
 @include string/wcsncasecmp.def
