@@ -1,3 +1,11 @@
+2009-03-15  Corinna Vinschen  <corinna@vinschen.de>
+
+	* libc/include/wchar.h (wcsdup, _wcsdup_r): Declare.
+	* libc/string/Makefile.am: Add wcsdup.c.
+	* libc/string/Makefile.in: Regenerate.
+	* libc/string/strings.tex: Add wcsdup documentation reference.
+	* libc/string/wcsdup.c: New file.
+
 2009-03-14  Corinna Vinschen  <corinna@vinschen.de>
 
 	* libc/include/stdlib.h (_mkstemp_r, _mktemp_r): Move out of
